--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD APP</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    
+    {{> navbar}}
     {{{ body }}}
 
 </body>
