--- a/src/views/links/add.hbs
+++ b/src/views/links/add.hbs
@@ -1,1 +1,25 @@
-desde hbs
+<div class="container p-4">
+    <div class="row">
+        <div class="col-md-6 mx-auto">
+            <form action="/links/add" method="POST">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="form-group">
+                            <input type="text" name="title" class="form-control" placeholder="Escribe el titulo" autofocus>
+                        </div>
+                        <div class="form-group">
+                            <input type="url" name="url" class="form-control" placeholder="Escribe la url" >
+                        </div>
+                        <div class="form-group">
+                            <textarea placeholder="Escribe la descripcion" name="description" rows="2" class="form-control"></textarea>
+                        </div>
+                        <div class="form-group">
+                           <button class="btn btn-info btn-block">ENVIAR</button>
+                        </div>
+                    </div>
+                </div>
+
+            </form>
+        </div>
+    </div>
+</div>
