--- a/src/views/links/list.hbs
+++ b/src/views/links/list.hbs
@@ -1,19 +1,30 @@
 <div class="container p-4">
     <div class="row">
+        {{!-- BUCLE PARA RECOORER CADA DATO DE BD --}}
         {{#each links}}
-            <div class="col-md-4">
-                <div class="card text-cente m-2">
-                    <div class="card-body">
-                        <a href="{{url}}" target="_blank"><h3 class="card-title text-uppercase">{{title}}</h3></a>
-                        <p class="m-2">{{description}}</p>
-                        <p>{{time created_at}}</p>
-                        <div class="container ">
-                            <a href="" class="btn btn-danger mr-2">Eliminar</a>
+        <div class="col-md-4">
+            <div class="card text-cente m-2">
+                <div class="card-body text-center">
+                    <a href="{{url}}" target="_blank">
+                        <h3 class="card-title text-uppercase">{{title}}</h3>
+                    </a>
+                    <p class="m-2">{{description}}</p>
+                    <p>{{time created_at}}</p>
+                    <div class="container ">
+                        <a href="/links/delete/{{id}}" class="btn btn-danger mr-2">Eliminar</a>
                         <a href="" class="btn btn-info">Editar</a>
-                        </div>
                     </div>
                 </div>
             </div>
-        {{/each}}
+        </div>
+        {{!-- EN CASO NO EXISTAN REGISTRO MUESTRA ESTE CODIGO --}}
+        {{else}}
+        <div class="col-md-6 mx-auto">
+            <div class="card card-body text-center">
+                <p>No existen Registros en la BD</p>
+                <a href="/links/add">Crea Uno!</a>
+            </div>
+        </div> {{!-- FIN DEL ELSE --}}
+        {{/each}}  {{!-- FIN DEL BLUCE --}}
     </div>
 </div>
