--- a/src/views/links/list.hbs
+++ b/src/views/links/list.hbs
@@ -12,7 +12,7 @@
                     <p>{{time created_at}}</p>
                     <div class="container ">
                         <a href="/links/delete/{{id}}" class="btn btn-danger mr-2">Eliminar</a>
-                        <a href="" class="btn btn-info">Editar</a>
+                        <a href="/links/edit/{{id}}" class="btn btn-info">Editar</a>
                     </div>
                 </div>
             </div>
