Add message usign sessiones and connect flash!

--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -1,33 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link log-out" href="#"
-              data-toggle="modal" data-target="#signinModal"
-              style="display:none;"
-                >Signin <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link log-out" href="#" data-toggle="modal" data-target="#signupModal" style="display:none;">Signup</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link log-in" href="#" id="logout" style="display:none;">Logout</a>
-            </li>
-          </ul>
+  <div class="container ml-auto">
+    <a class="navbar-brand" href="/">CRUD Nodejs | Mysql</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav ml-auto">
+     
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          DATOS
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="/links/add">Agregar</a>
+          <a class="dropdown-item" href="/links">Listar</a>
         </div>
-      </div>
-    </nav>
+      </li> 
+      
+    </ul>
+  </div>
+  </div>
+</nav>
