--- a/src/views/partials/mensaje.hbs
+++ b/src/views/partials/mensaje.hbs
@@ -12,3 +12,18 @@
             </div>
         </div>
     {{/if}} {{!-- FIN DE LA ALERTA --}}
+
+ {{#if error}} {{!-- MUESTRA UN ERROR SI FALLA AL COMPARAR EL PASSWORD--}}
+        <div class="container p-4">
+            <div class="row">
+                <div class="col-md-5 mx-auto">
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        {{guardado}}
+                        <button type="button" class="close" data-dismiss="alert" arial-label="Close">  
+                            <span  aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {{/if}} {{!-- FIN DE LA ALERTA ERROR --}}
