--- a/src/views/partials/mensaje.hbs
+++ b/src/views/partials/mensaje.hbs
@@ -18,7 +18,7 @@
             <div class="row">
                 <div class="col-md-5 mx-auto">
                     <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                        {{guardado}}
+                        {{error}}
                         <button type="button" class="close" data-dismiss="alert" arial-label="Close">  
                             <span  aria-hidden="true">&times;</span>
                         </button>
