add flash message to de login and register, created middlware for the routes when the user is logued and deslogued, navbar is modify this show links conditionally and created the view to de profile

--- a/src/views/auth/login.hbs
+++ b/src/views/auth/login.hbs
@@ -20,6 +20,9 @@
                             Iniciar Session
                         </button>
                     </div>
+                    <div class="form-group">
+                        <a href="/registro">¿No tienes cuenta? Registrate</a>
+                    </div>
                 </form>
             </div>
             </div> 
