--- a/src/views/auth/registro.hbs
+++ b/src/views/auth/registro.hbs
@@ -23,6 +23,9 @@
                             Registrarse
                         </button>
                     </div>
+                    <div class="form-group">
+                        <a href="/login">¿Ya tienes cuenta? Comienza</a>
+                    </div>
                 </form>
             </div>
             </div> 
