--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -1,12 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container ml-auto ">
+  <div class="container">
     <a class="navbar-brand" href="/">CRUD Nodejs | Mysql</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav ml-auto">
-     
+    {{!-- MUESTRA ESTOS ENLACES SI EL USUARIO EXSITE EN LA SESSION DEL SERVER --}}
+     {{#if user}}
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           DATOS
@@ -16,7 +17,13 @@
           <a class="dropdown-item" href="/links">Listar</a>
         </div>
       </li> 
-      
+      <li class="nav-item">
+        <a class="nav-link" href="/perfil">Perfil</a>
+      </li>
+      <li class="nav-item">
+        <a href="/logout" class="nav-link">Cerrar Session</a>
+        </li>
+      {{/if}}
     </ul>
   </div>
   </div>
