--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,4 +1,44 @@
-body{
-    background: #0b1f3a;
-    /* overflow:hidden */
+body {
+  background: #0b1f3a;
+}
+
+.text-light {
+  font-weight: bold;
+}
+
+.index {
+  width: 100%;
+  height: 100%;
+}
+.header {
+  min-height: 30rem;
+  width: 100%;
+  padding-top: 8rem;
+  background:url("/img/img.jpg");
+  background-position:center;
+  background-repeat: no-repeat;
+}
+.header h1 {
+  font-size: 3rem;
+  margin: 0;
+  padding: 0;
+}
+
+@media screen and (max-width: 350px) {
+  .header h1 {
+    font-size: 1.5rem;
+  }
+}
+@media screen and (max-width: 900px) {
+  .header {
+    height: 100vh;
+  }
+}
+@media screen and (min-width: 900px) {
+  .header {
+    height: 100vh;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
