--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -14,7 +14,8 @@ body {
   min-height: 30rem;
   width: 100%;
   padding-top: 8rem;
-  background:url("/img/img.jpg");
+/* background: ; */
+  background-image: linear-gradient(90deg, rgba(2,0,36,0.5) 0%, rgba(123,88,173,0.5) 36%, rgba(0,212,255,0.5) 100%),url("/img/img.jpg");
   background-position:center;
   background-repeat: no-repeat;
 }
